--- a/Apps/buglog/BugLog/BugLog.csproj
+++ b/Apps/buglog/BugLog/BugLog.csproj
@@ -17,34 +17,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1742.451" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1742.451" />
-    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="3.0.1739.950" />
-    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models" Version="3.0.1734.512" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1734.512" />
-    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1734.512" />
-    <PackageReference Include="LagoVista.ProjectManagement.Models" Version="3.0.1756.801" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1795.1556" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1795.1556" />
+    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.ProjectManagement.Models" Version="3.0.1795.1429" />
 
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
-    <PackageReference Include="Microsoft.AppCenter" Version="4.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.5.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="LagoVista.Core" Version="3.0.1742.451" />
-    <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.1734.512" />
-    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="3.0.1734.512" />
-    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1734.512" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1734.512" />
-    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.1795.1556" />
+    <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1795.1429" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1795.1429" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
-    <ProjectReference Include="..\..\..\src\LagoVista.XPlat.Core\LagoVista.XPlat.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -60,17 +50,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>BugLogResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Update="Controls\RepoSupport.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\MainView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\SettingsView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="Views\SplashView.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Controls\" />
   </ItemGroup>
 </Project>
