--- a/src/LagoVista.Xplat.WPF/LagoVista.XPlat.WPF.NetStd.Core.csproj
+++ b/src/LagoVista.Xplat.WPF/LagoVista.XPlat.WPF.NetStd.Core.csproj
@@ -14,6 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome5" Version="2.1.11" />
+  </ItemGroup>
+
+
+  <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
   </ItemGroup>
 
