--- a/Apps/NuvIoT.HardwareClient/NuvIoT.HardwareClient.csproj
+++ b/Apps/NuvIoT.HardwareClient/NuvIoT.HardwareClient.csproj
@@ -1,11 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="..\..\src\LagoVista.Client.Core\Interfaces\IGATTConnection.cs" Link="IGATTConnection.cs" />
     <Compile Include="..\..\src\LagoVista.Client.Core\Models\BLEDevice.cs" Link="BLEDevice.cs" />
@@ -15,17 +13,14 @@
     <Compile Include="..\..\src\LagoVista.Client.Core\Models\NuvIoTGATTProfile.cs" Link="NuvIoTGATTProfile.cs" />
     <Compile Include="..\..\src\LagoVista.Core.UWP\Services\GattConnection.cs" Link="GattConnection.cs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="LagoVista.Core" Version="3.0.1579.1359" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="System.IO.Ports" Version="5.0.1" />
   </ItemGroup>
-
   <!--<ItemGroup>
     <ProjectReference Include="..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
   </ItemGroup>-->
-
   <ItemGroup>
     <Reference Include="System.Runtime.WindowsRuntime">
       <HintPath>C:\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Runtime.WindowsRuntime.dll</HintPath>
@@ -35,7 +30,6 @@
       <IsWinMDFile>true</IsWinMDFile>
     </Reference>
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="DefaultConfig.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -43,12 +37,10 @@
       <DependentUpon>DefaultConfig.settings</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <None Update="DefaultConfig.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>DefaultConfig.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-
 </Project>
