--- a/Apps/buglog/BugLog/BugLog - Backup.csproj
+++ b/Apps/buglog/BugLog/BugLog - Backup.csproj
@@ -1,21 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="Services\**" />
     <EmbeddedResource Remove="Services\**" />
     <None Remove="Services\**" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1795.1556" />
     <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1795.1556" />
@@ -24,7 +20,6 @@
     <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1795.1429" />
     <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1795.1429" />
     <PackageReference Include="LagoVista.ProjectManagement.Models" Version="3.0.1940.1458" />
-
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="LagoVista.Core" Version="3.0.1795.1556" />
     <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.1795.1429" />
@@ -32,11 +27,9 @@
     <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1795.1429" />
     <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1795.1429" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="BugLogResources.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -44,14 +37,12 @@
       <DependentUpon>BugLogResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="BugLogResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>BugLogResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Interfaces\" />
