--- a/Apps/buglog/BugLog/BugLog.csproj
+++ b/Apps/buglog/BugLog/BugLog.csproj
@@ -1,15 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Remove="Controls\**" />
     <Compile Remove="Extensions\**" />
@@ -24,7 +21,6 @@
     <None Remove="Interfaces\**" />
     <None Remove="Services\**" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1982.1349" />
     <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1982.1349" />
@@ -33,7 +29,6 @@
     <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1982.1349" />
     <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1982.1349" />
     <PackageReference Include="LagoVista.ProjectManagement.Models" Version="3.0.1982.1349" />
-
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="LagoVista.Core" Version="3.0.1982.1349" />
     <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.1982.1349" />
@@ -41,11 +36,9 @@
     <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1982.1349" />
     <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1982.1349" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="BugLogResources.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -53,7 +46,6 @@
       <DependentUpon>BugLogResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="BugLogResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
