--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.XPlat</id>
-    <version>1.2.1410-alpha1504</version>
+    <version>3.0.2287.1703</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
