--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.2</VersionPrefix>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <DebugType>Full</DebugType>
     <AssemblyOriginatorKeyFile>clientcore.key.snk</AssemblyOriginatorKeyFile>
@@ -24,16 +24,16 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.1982.1349" />
-    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.1982.1349" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.MediaServices.Models" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.IoT.DeviceAdmin.Models" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.IoT.Deployment.Models" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.IoT.DeviceManagement.Models" Version="3.0.2287.946" />
+    <PackageReference Include="LagoVista.IoT.Pipeline.Models" Version="3.0.2287.946" />
     <PackageReference Include="Microsoft.AppCenter" Version="4.5.3" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.5.3" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.5.3" />
