--- a/src/LagoVista.Xplat.WPF/Package.nuspec
+++ b/src/LagoVista.Xplat.WPF/Package.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>LagoVista.Client.Core</id>
+    <id>LagoVista.XPlat.WPF.NetStd.Core</id>
     <version>3.0.2287.1922</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
@@ -16,20 +16,11 @@
     <dependencies>
       <group targetFramework="netstandard2.1">
         <dependency id="LagoVista.Core" version="3.0.2287.946" />
-        <dependency id="LagoVista.Core.Authentication" version="3.0.2287.946" />
-        <dependency id="LagoVista.Core.Networking" version="3.0.2287.946" />
-        <dependency id="LagoVista.IoT.Logging" version="3.0.2287.946" />
-        <dependency id="LagoVista.UserAdmin.Models" version="3.0.2287.946" />
-        <dependency id="LagoVista.MediaServices.Models" version="3.0.2287.946" />
-        <dependency id="LagoVista.IoT.DeviceAdmin.Models" version="3.0.2287.946" />
-        <dependency id="LagoVista.IoT.Deployment.Models" version="3.0.2287.946" />
-        <dependency id="LagoVista.IoT.DeviceManagement.Models" version="3.0.2287.946" />
-        <dependency id="LagoVista.IoT.Pipeline.Models" version="3.0.2287.946" />
       </group>
     </dependencies>
     <tags>HomeAutomation IoT LagoVista</tags>
   </metadata>
   <files>
-    <file src="bin\release\netstandard2.1\*.dll" target="lib\netstandard2.1" />
+    <file src="bin\Release\net6.0-windows\LagoVista.XPlat.WPF.NetStd.Core.dll" target="lib\net6.0" />
   </files>
 </package>
