--- a/src/LagoVista.Client.Core/Package.nuspec
+++ b/src/LagoVista.Client.Core/Package.nuspec
@@ -2,15 +2,15 @@
 <package>
   <metadata>
     <id>LagoVista.Client.Core</id>
-    <version>1.2.1410-alpha1504</version>
+    <version>3.0.2841.0742</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>http://github.com/LagoVista</projectUrl>
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <description>Core Mobile Client Functionality for the LagoVista Devices, IoT and Home Automation Frameworks</description>
-    <releaseNotes>Pre-release Software</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <releaseNotes>Beta Software</releaseNotes>
+    <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT LagoVista</tags>
   </metadata>
   <files>
